# gamespell

./: .clang-format  CMakeLists.txt  LICENSE.txt  README.md  vcpkg.json
assets/shaders/: vertex_shader.glsl
examples/: CMakeLists.txt
examples/hello_triangle/: CMakeLists.txt  main.cc
include/gs/: endian.hh  noncopyable.hh  propagate_const.hh
include/gs/events/: close_window_event.hh  event.hh  publisher.hh  subscriber.hh
include/gs/framework/: application.hh
include/gs/graphics/: image.hh  png_image.hh  primitive.hh  render_context.hh  shader.hh  shader_program.hh  vertex_attribute.hh  vertex_buffer.hh  vertex_schema.hh
include/gs/math/: matrix4x4.hh  vector2.hh  vector3.hh
include/gs/os/: error.hh  file_watcher.hh  unicode.hh  window.hh  window_event.hh  window_handle.hh
src/: CMakeLists.txt
src/libgamespell_core/: CMakeLists.txt  endian.cc
src/libgamespell_core/events/: publisher.cc
src/libgamespell_core/graphics/: png_image.cc
src/libgamespell_core/os/: window.cc
src/libgamespell_core/os/win32/: error.cc  file_watcher.cc  unicode.cc  window.cc
src/libgamespell_framework/: CMakeLists.txt  application.cc  main.cc
src/libgamespell_framework/win32/: application.cc
src/libgamespell_main/: CMakeLists.txt  main.cc
src/libgamespell_opengl/: CMakeLists.txt
src/libgamespell_opengl/graphics/: opengl_extensions.cc  opengl_extensions.hh  opengl_shader.cc  opengl_shader_program.cc  opengl_vertex_buffer.cc
src/libgamespell_opengl/graphics/win32/: opengl_render_context.cc
tests/: CMakeLists.txt
tests/math/: test_vector2.cc  test_vector3.cc
tools/: CMakeLists.txt
tools/shader_viewer/: CMakeLists.txt  app_main.cc  main.cc  shader_viewer.cc  shader_viewer.hh
